Created a top nav bar , started working on responsivness, finalised html markup

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,187 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+<html lang="en">
 
-    <section class="big-news">
-      <!-- The big news content -->
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles.css" />
+  <title>poketnews</title>
+</head>
+
+<body>
+  <header>
+    <nav class="container navbar">
+      <a href="#"><img class="logo-desktop" src="logo-pics/clear.svg" alt="logo-desktop" /></a>
+      <a href="#"><img class="logo-tablets-and-mobiles" src="logo-pics/vector/logo-original.svg" alt="logo-other" /></a>
+      <ul class="navlinks-container list">
+        <li label="nav-links"><a href="#" class="nav-links" alt="home">Home</a></li>
+        <li label="nav-links"><a href="#" class="nav-links" alt="tech">Tech</a></li>
+        <li label="nav-links"><a href="#" class="nav-links" alt="science">Science</a></li>
+        <li label="nav-links"><a href="#" class="nav-links" alt="more">More</a></li>
+      </ul>
+      <a href="#" alt="search-icon">
+        <svg class="top-navicons svg">
+          <use href="#search-icon"></use>
+        </svg></a>
+      <a href="#" alt="menu-icon">
+        <svg class="top-navicons svg">
+          <use href="#menu-icon"></use>
+        </svg></a>
+    </nav>
+  </header>
+
+  <main>
+    <section class="container">
+      <div>
+        <a href="https://www.dummies.com/careers/project-management/use-agile-principles-teamwork-project/"
+          target="blank" alt="article from dummies.com"><img src="logo-pics/marvin-meyer-SYTO3xs06fU-unsplash.jpg"
+            alt="agile team" /></a>
+        <ul class="list">
+          <li label="sharing-icons">
+            <a href="#" alt="twitter-icon"><svg class="icon svg">
+                <use href="#twitter-icon"></use>
+              </svg>
+            </a>
+          </li>
+          <li label="sharing-icons">
+            <a href="#" alt="facebook-icon"><svg class="icon svg">
+                <use href="#facebook-icon"></use>
+              </svg></a>
+          </li>
+          <li label="sharing-icons">
+            <a href="#" alt="reddit-icon"><svg class="icon svg">
+                <use href="#reddit-icon"></use>
+              </svg></a>
+          </li>
+          <li label="sharing-icons">
+            <a href="#" alt="instagram-icon"><svg class="icon svg">
+                <use href="#instagram-icon"></use>
+              </svg></a>
+          </li>
+          <li label="sharing-icons">
+            <a href="#" alt="linked-icon"><svg class="icon svg">
+                <use href="#linkedin-icon"></use>
+              </svg></a>
+          </li>
+        </ul>
+      </div>
+
+      <div>
+        <p>
+          Teamwork is critical to agile projects. Creating good products requires cooperation among all the members of
+          the project team, including customers
+          and stakeholders. Agile approaches support team-building and teamwork, and they emphasize trust in
+          self-managing development teams. A skilled,
+          motivated, unified, and empowered project team is a successful team.
+          <a href="https://www.dummies.com/careers/project-management/use-agile-principles-teamwork-project/"
+            target="blank" alt="read more">Read more...</a>
+        </p>
+      </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <hr />
+
+    <section class="news-container">
+      <div>
+        <a href="https://demo.getpublii.com/themes/technews/desktop/" target="blank"><img
+            src="logo-pics/frankie-lg35FkimT30-unsplash.jpg" alt="desk picture" /></a>
+        <p>Knowing these 6 secrets will make your dekstop look amazing!</p>
+      </div>
+      <div>
+        <a href="https://demo.getpublii.com/themes/technews/desktop/" target="blank"><img
+            src="logo-pics/frankie-lg35FkimT30-unsplash.jpg" alt="desk picture" /></a>
+        <p>Knowing these 6 secrets will make your dekstop look amazing!</p>
+      </div>
+      <div>
+        <a href="https://demo.getpublii.com/themes/technews/desktop/" target="blank"><img
+            src="logo-pics/frankie-lg35FkimT30-unsplash.jpg" alt="desk picture" /></a>
+        <p>Knowing these 6 secrets will make your dekstop look amazing!</p>
+      </div>
+      <div>
+        <a href="https://demo.getpublii.com/themes/technews/desktop/" target="blank"><img
+            src="logo-pics/frankie-lg35FkimT30-unsplash.jpg" alt="desk picture" /></a>
+        <p>Knowing these 6 secrets will make your dekstop look amazing!</p>
+      </div>
+      <div>
+        <a href="https://demo.getpublii.com/themes/technews/desktop/" target="blank"><img
+            src="logo-pics/frankie-lg35FkimT30-unsplash.jpg" alt="desk picture" /></a>
+        <p>Knowing these 6 secrets will make your dekstop look amazing!</p>
+      </div>
+      <div>
+        <a href="https://demo.getpublii.com/themes/technews/desktop/" target="blank"><img
+            src="logo-pics/frankie-lg35FkimT30-unsplash.jpg" alt="desk picture" /></a>
+        <p>Knowing these 6 secrets will make your dekstop look amazing!</p>
+      </div>
+      <div>
+        <iframe src="https://www.youtube.com/embed/bpVRWrrfM1M" title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+        <p>Knowing these 6 secrets will make your dekstop look amazing!</p>
+      </div>
+      <div>
+        <a href="https://tcrn.ch/3xYYL89" target="blank" alt="getpublii page"><iframe
+            src="https://demo.getpublii.com/themes/technews/dron/"></iframe></a>
+        <p>Knowing these 6 secrets will make your dekstop look amazing!</p>
+      </div>
     </section>
-  </body>
+    <button>Subscribe</button>
+  </main>
+
+  <footer>
+    <nav class="container navbar">
+      <a href="#" class="nav-links" alt="Contact us">Contact us</a>
+      <a href="#" class="nav-links" alt="Career page">Career page</a>
+      <a href="#" class="nav-links" alt="Privacy Policy">Our partners</a>
+      <a href="#" class="nav-links" alt="Cookies">More</a>
+    </nav>
+    <p>Designed and developed by Mary Snopok</p>
+  </footer>
+
+  <!-- Changing colors of all svg items on the page. (Going from default black to ability to change color via CSS
+      Stackoverflow link for clarifications if needed : https://stackoverflow.com/questions/34225008/how-to-reuse-an-embedded-svg-element-in-the-same-page) -->
+  <svg style="display: none" class="top-navicons svg" role="img" xmlns="http://www.w3.org/2000/svg">
+    <defs>
+      <symbol id="search-icon" viewBox="0 0 512 512">
+        <path fill="currentColor"
+          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z">
+        </path>
+      </symbol>
+      <symbol id="menu-icon" viewBox="0 0 448 512">
+        <path fill="currentColor"
+          d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z">
+        </path>
+      </symbol>
+    </defs>
+    <svg style="display: none" class="icon svg" role="img" xmlns="http://www.w3.org/2000/svg">
+      <defs>
+        <symbol id="twitter-icon" viewBox="0 0 448 512">
+          <path fill="currentColor"
+            d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z">
+          </path>
+        </symbol>
+        <symbol id="facebook-icon" viewBox="0 0 448 512">
+          <path fill="currentColor"
+            d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.25V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48z">
+          </path>
+        </symbol>
+        <symbol id="reddit-icon" viewBox="0 0 448 512">
+          <path fill="currentColor"
+            d="M283.2 345.5c2.7 2.7 2.7 6.8 0 9.2-24.5 24.5-93.8 24.6-118.4 0-2.7-2.4-2.7-6.5 0-9.2 2.4-2.4 6.5-2.4 8.9 0 18.7 19.2 81 19.6 100.5 0 2.4-2.3 6.6-2.3 9 0zm-91.3-53.8c0-14.9-11.9-26.8-26.5-26.8-14.9 0-26.8 11.9-26.8 26.8 0 14.6 11.9 26.5 26.8 26.5 14.6 0 26.5-11.9 26.5-26.5zm90.7-26.8c-14.6 0-26.5 11.9-26.5 26.8 0 14.6 11.9 26.5 26.5 26.5 14.9 0 26.8-11.9 26.8-26.5 0-14.9-11.9-26.8-26.8-26.8zM448 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zm-99.7 140.6c-10.1 0-19 4.2-25.6 10.7-24.1-16.7-56.5-27.4-92.5-28.6l18.7-84.2 59.5 13.4c0 14.6 11.9 26.5 26.5 26.5 14.9 0 26.8-12.2 26.8-26.8 0-14.6-11.9-26.8-26.8-26.8-10.4 0-19.3 6.2-23.8 14.9l-65.7-14.6c-3.3-.9-6.5 1.5-7.4 4.8l-20.5 92.8c-35.7 1.5-67.8 12.2-91.9 28.9-6.5-6.8-15.8-11-25.9-11-37.5 0-49.8 50.4-15.5 67.5-1.2 5.4-1.8 11-1.8 16.7 0 56.5 63.7 102.3 141.9 102.3 78.5 0 142.2-45.8 142.2-102.3 0-5.7-.6-11.6-2.1-17 33.6-17.2 21.2-67.2-16.1-67.2z">
+          </path>
+          >
+        </symbol>
+        <symbol id="instagram-icon" viewBox="0 0 448 512">
+          <path fill="currentColor"
+            d="M224,202.66A53.34,53.34,0,1,0,277.36,256,53.38,53.38,0,0,0,224,202.66Zm124.71-41a54,54,0,0,0-30.41-30.41c-21-8.29-71-6.43-94.3-6.43s-73.25-1.93-94.31,6.43a54,54,0,0,0-30.41,30.41c-8.28,21-6.43,71.05-6.43,94.33S91,329.26,99.32,350.33a54,54,0,0,0,30.41,30.41c21,8.29,71,6.43,94.31,6.43s73.24,1.93,94.3-6.43a54,54,0,0,0,30.41-30.41c8.35-21,6.43-71.05,6.43-94.33S357.1,182.74,348.75,161.67ZM224,338a82,82,0,1,1,82-82A81.9,81.9,0,0,1,224,338Zm85.38-148.3a19.14,19.14,0,1,1,19.13-19.14A19.1,19.1,0,0,1,309.42,189.74ZM400,32H48A48,48,0,0,0,0,80V432a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V80A48,48,0,0,0,400,32ZM382.88,322c-1.29,25.63-7.14,48.34-25.85,67s-41.4,24.63-67,25.85c-26.41,1.49-105.59,1.49-132,0-25.63-1.29-48.26-7.15-67-25.85s-24.63-41.42-25.85-67c-1.49-26.42-1.49-105.61,0-132,1.29-25.63,7.07-48.34,25.85-67s41.47-24.56,67-25.78c26.41-1.49,105.59-1.49,132,0,25.63,1.29,48.33,7.15,67,25.85s24.63,41.42,25.85,67.05C384.37,216.44,384.37,295.56,382.88,322Z">
+          </path>
+        </symbol>
+        <symbol id="linkedin-icon" viewBox="0 0 448 512">
+          <path fill="currentColor"
+            d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z">
+          </path>
+        </symbol>
+      </defs>
+    </svg>
+</body>
+
 </html>
