main structure responsive of every section

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,92 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+  <header>
+    <!-- Some kind of logo and navbar -->
+    <div class="logo">
+      <img src="/images/logo.svg" alt="logo" />
+      <h1>Tech News</h1>
+    </div>
+    <nav class="nav-bar">
+      <a href="" alt="">News</a>
+      <a href="" alt="">News</a>
+      <img src="/images/logo.svg" alt="logo" />
+      <a href="" alt="">News</a>
+      <a href="" alt="">News</a>
+    </nav>
+  </header>
+
+  <section class="big-news">
+    <!-- The big news content -->
+    <div class="big-image">
+      <img
+        src="https://static.euronews.com/articles/stories/06/00/12/18/808x539_cmsv2_241b455a-1d67-53c7-b665-a57944f47c5c-6001218.jpg"
+        alt="">
+    </div>
+
+    <div class="big-text">
+      <h1>Tony Blair: Afghanistan withdrawal is 'tragic, dangerous, and unnecessary'</h1>
+      <p>Tony Blair lambasted the US withdrawal from Afghanistan in an article on his institute's website, stating that
+        the decision to leave is "political" rather than "strategic".
+
+        "The abandonment of Afghanistan and its people is tragic, dangerous, unnecessary, not in their interests and not
+        in ours," the former British prime minister wrote.
+
+
+      </p>
+    </div>
+
+  </section>
+
+  <section class="small-news">
+    <!-- The other news  -->
+
+    <div class="small-square">
+      <img class="small-img" src="/images/covid.jpeg" alt="covid vaccinne">
+      <h2>Health</h2>
+      <h3>What are the potential side effects of having a COVID vaccine?</h3>
+    </div>
+    <div class="small-square">
+      <img class="small-img" src="/images/covid.jpeg" alt="covid vaccinne">
+      <h2>Health</h2>
+      <h3>What are the potential side effects of having a COVID vaccine?</h3>
+    </div>
+    <div class="small-square">
+      <img class="small-img" src="/images/covid.jpeg" alt="covid vaccinne">
+      <h2>Health</h2>
+      <h3>What are the potential side effects of having a COVID vaccine?</h3>
+    </div>
+    <div class="small-square">
+      <img class="small-img" src="/images/covid.jpeg" alt="covid vaccinne">
+      <h2>Health</h2>
+      <h3>What are the potential side effects of having a COVID vaccine?</h3>
+    </div>
+    <div class="small-square">
+      <img class="small-img" src="/images/covid.jpeg" alt="covid vaccinne">
+      <h2>Health</h2>
+      <h3>What are the potential side effects of having a COVID vaccine?</h3>
+    </div>
+    <div class="small-square">
+      <img class="small-img" src="/images/covid.jpeg" alt="covid vaccinne">
+      <h2>Health</h2>
+      <h3>What are the potential side effects of having a COVID vaccine?</h3>
+    </div>
+    <div class="small-square">
+      <img class="small-img" src="/images/covid.jpeg" alt="covid vaccinne">
+      <h2>Health</h2>
+      <h3>What are the potential side effects of having a COVID vaccine?</h3>
+    </div>
+
+  </section>
+</body>
+
 </html>
