added all content

--- a/code/index.html
+++ b/code/index.html
@@ -9,14 +9,124 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <h1>birdviews</h1>
+      <img class="seagull" src="https://i.guim.co.uk/img/media/6ba30e96faa15f1aa2662f0da1974b233b2fce84/109_390_1831_1099/master/1831.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=15d51b434c4fdee5abb7ab57a3574f47" alt="picture of seagull">
+      <p>we look down AND out for everyone</p>
+      <h2>Your weekly guide to life with wings!</h2>
     </header>
+
+    <!-- Nav-bar with links-->
+    <a href="https://www.klart.se/">Weather</a>
+    <a href="https://birdlife.se/">Birdlife</a>
+    <a href="https://twitter.com/?lang=sv">Social</a>
+    <a href="https://www.aftonbladet.se/">Hooman world</a>
 
     <section class="big-news">
       <!-- The big news content -->
+        <h3>New Wind Farm in Stockholm</h3>
+        <p>
+          New wind farm is planned to be set up just outside of Stockholm. 
+          We urge everyone to keep up with the construction and find new way to fly 
+          when flying through the south of the city. Our reporters haven’t yet found out 
+          the exact date for building to commence. As soon as we have the information 
+          we will post it.  
+        </p>
     </section>
 
-    <section class="">
+    <section class="windfarmpicture">
+      <img class="dead-bird" src="https://windmillskill.com/sites/windmillskill/files/styles/hosted_core_wide/public/grulla-montes-cierzo.jpg?itok=x8VbCXV5" alt="dead bird"></img>
+      
       <!-- The other news  -->
     </section>
+
+    <article class="migrate">
+      <h4>Winter is commning</h4>
+      <p>
+        Is it time for you to fly south? Check out this link to see 
+        who else will join you and where everyone is going.
+      </p>
+      <a href="https://www.birdlife.org/worldwide/programmes/migratory-birds">Flying south?</a>
+      <img class="world-map" src="https://www.birdlife.org/sites/default/files/styles/full_1140x550/public/flyways_infographic_thin_1.jpg?itok=dgXS3Qja" alt="World map">
+
+    </article>
+
+    <article class="staying">
+      <h4>Staying for christmas?</h4>
+      <p>
+        For all of you staying with us this winter it's time to start prepping.
+        Bulking season is here. Summer is over and with that beach season. 
+        So start to eat as much as possible. That extra fat will be useful when 
+        the cold is here and food is limited. Don’t worry about beach 2022, 
+        that extra fat will be gone by march and you will regret that you didn’t eat 
+        even more during the fall. Remember, a fat winter bird is a happy winter bird!
+      </p>
+    </article>
+
+    <article class="short-news">
+      <h4>Short news</h4>
+      <p>
+        Hawk assaulted by gang of sparrows, needed to seek medical attention. <br>
+        Seagull association try to take over fish ‘n chip company. <br>
+        150 new reports of birds crashing into windows (1 553 013 this year). <br>
+        0 new reports of the bird flue, passing it on to hoomans seemed to work.
+      </p>
+    </article>
+
+    <article class="long-legs">
+      <img class="owl" src="https://pbs.twimg.com/media/EWhnmsJWoAAV_RN.jpg" alt="owl">
+      <p>
+        New winner in the "Long leg contest" miss Henrietta Owl-Smith. 
+        With her long legs and perfect stride she charmed the judges and won the contest. 
+        Both the flamingo and emu teams handed in their protests but the decision is final.
+      </p>
+    </article>
+
+    <article class="local-news">
+      <h4>Local news</h4>
+      <p>
+        Our reporter covering the community council has yet to report anything. 
+        Aside from the wind farm not much seem to be up with the hoomans. 
+        The amount of them moving around has thou increased in the last weeks. 
+        So hopefully there will be more food for us city birds in trash bins. 
+        And you country birds will hopefully be more left alone on the countryside 
+        as more hoomans seem to return to the city. 
+
+      </p>
+    </article>
+
+    <article class="movies">
+      <h4>Movies</h4>
+      <p>
+        As requested we have now counted all the votes and have the result 
+        from the poll “Best movies of all time” and here is the Top 5:
+        <ol>
+          <li>The Birds</li>
+          <li>Angry Birds</li>
+          <li>Bird Box</li>
+          <li>Birds of Prey</li>
+          <li>The Thorn Birds</li>
+        </ol>
+      </p>
+      
+    </article>
+
+    <article class="hoomans">
+      <h4>Per usual we are listing hoomans of the week</h4>
+      <ul>
+        <li>Magnus Ugglas</li>
+        <li>Ara Abrahamian</li>
+        <li>Florence Nightingale</li>
+        <li>Robin Williams</li>
+        <li>Pippi</li>
+      </ul>
+    </article>
+
+    <article class="birds-without-bordes">
+      <h4>Birds without borders</h4>
+      <p>
+        A last shoutout to out friends “Birds without borders”. Please help and donate as much as you can.
+      </p>
+      <a href="https://www.rspb.org.uk/"><img src="https://images-na.ssl-images-amazon.com/images/I/41jalLJbj1L.jpg" alt="the world and birds"></img></a>
+    </article>
   </body>
 </html>
