--- a/code/index.html
+++ b/code/index.html
@@ -4,19 +4,270 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/7ed1b41d25.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+    <div class="center-screen">
+      <a name="top"></a>
+      <header class="header-mobile">
+        <a href="#top">
+          <div class="logotype">
+            <span class="bold">The </span><span class="thin">Newspaper</span>
+          </div>
+        </a>
+      </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+      <header class="header-ipad">
+        <a href="#">
+          <div class="icon-and-text">
+            <i class="far fa-newspaper"></i>
+            <span>News</span>
+          </div>
+        </a>
+        <a href="#">
+          <div class="icon-and-text icon">
+            <i class="fas fa-dollar-sign icon"></i>
+            <span>Economy</span>
+          </div>
+        </a>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+        <a href="#top">
+          <div class="logotype">
+            <span class="bold">The </span><span class="thin">Newspaper</span>
+          </div>
+        </a>
+        <a href="#">
+          <div class="icon-and-text icon">
+            <i class="fas fa-futbol icon"></i>
+            <span>Sports</span>
+          </div>
+        </a>
+        <a href="#">
+          <div class="icon-and-text">
+            <i class="fas fa-music"></i>
+            <span>Entertainment</span>
+          </div>
+        </a>
+      </header>
+
+      <header class="header-desktop">
+        <a href="#top">
+          <div class="logotype">
+            <span class="bold">The </span><span class="thin">Newspaper</span>
+          </div>
+        </a>
+        <div class="menu-container">
+          <a href="#">
+            <div class="icon-and-text">
+              <i class="far fa-newspaper icon"></i>
+              <span>News</span>
+            </div>
+          </a>
+          <a href="#">
+            <div class="icon-and-text icon">
+              <i class="fas fa-dollar-sign icon"></i>
+              <span>Economy</span>
+            </div>
+          </a>
+          <a href="#">
+            <div class="icon-and-text icon">
+              <i class="fas fa-futbol icon"></i>
+              <span>Sports</span>
+            </div>
+          </a>
+          <a href="#">
+            <div class="icon-and-text">
+              <i class="fas fa-music"></i>
+              <span>Entertainment</span>
+            </div>
+          </a>
+        </div>
+      </header>
+
+      <section class="big-news-container">
+        <div class="big-news-image">
+          <img
+            class="big-news-image"
+            src="big-news-image.jpeg"
+            alt="A photograph of three soldiers walking with guns"
+          />
+        </div>
+        <div class="big-news-text-container">
+          <div class="big-news-text-1">
+            <a href="#">
+              <h3>
+                Scenes from Afghanistan: U.S. troops struggle to secure the
+                airport for their evacuation.
+              </h3>
+              <span>
+                The Taliban control all of Kabul where Hamid Karzai
+                International airport is located.
+              </span>
+            </a>
+          </div>
+
+          <div class="big-news-text-2">
+            <a href="#">
+              <h3>
+                How the Taliban turned social media into a tool for control
+              </h3>
+              <span>
+                They banned the internet. Now they use it to threaten the Afghan
+                people.
+              </span>
+            </a>
+          </div>
+
+          <div class="big-news-text-3">
+            <a href="#">
+              <h3>
+                A celebrated Afghan school fears the Taliban will stop the music
+              </h3>
+              <span>
+                The Afghanistan National Institute of music became a symbol of
+                the country's changing identity.
+              </span>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <section class="other-news-container">
+        <div class="other-news item-1">
+          <img
+            class="other-news-pictures"
+            src="medications-image.jpg"
+            alt="A photograph of medications"
+          />
+          <a href="#">
+            <div class="other-news-text-container">
+              <span class="other-news-bold">
+                F.D.A. expected to fully approve Phizer vaccine next week
+              </span>
+              <span class="other-news-thin">
+                The shot is currently being given in the US under an emergency
+                use authorization.
+              </span>
+            </div>
+          </a>
+        </div>
+        <div class="other-news item-2">
+          <a href="#">
+            <div class="other-news-text-container">
+              <span class="other-news-bold">
+                Nursing is in crisis: staff shortages put patients at risk
+              </span>
+              <span class="other-news-thin">
+                Before Covid, the U.S. faced cursing shortages. But the Delta
+                variant has experts worried.
+              </span>
+            </div>
+          </a>
+          <img
+            class="other-news-pictures"
+            src="nursing.jpg"
+            alt="A photograph of three hospital beds"
+          />
+        </div>
+        <div class="other-news item-3">
+          <img
+            class="other-news-pictures"
+            src="hurricane.jpg"
+            alt="A photograph of a hurricane"
+          />
+          <a href="#">
+            <div class="other-news-text-container">
+              <span class="other-news-bold">
+                Henri threatens hurricane-strength winds from Long Island to
+                Nantucket
+              </span>
+              <span class="other-news-thin">
+                Gaining strength, Tropical Storm Henri barreled toward New
+                England.
+              </span>
+            </div>
+          </a>
+        </div>
+        <div class="other-news item-4">
+          <a href="#">
+            <div class="other-news-text-container">
+              <span class="other-news-bold">
+                California’s gig worker law is unconstitutional, judge rules
+              </span>
+              <span class="other-news-thin">
+                Last year, more than $200 million was spent for a state
+                proposition that ensured uber drivers were considered
+                contractors.
+              </span>
+            </div>
+          </a>
+          <img
+            class="other-news-pictures"
+            src="uber.jpg"
+            alt="A photograph of a Car"
+          />
+        </div>
+        <div class="other-news item-5">
+          <img
+            class="other-news-pictures"
+            src="vietnam.jpg"
+            alt="A photograph of soldiers boarding a plane"
+          />
+          <a href="#">
+            <div class="other-news-text-container">
+              <span class="other-news-bold">
+                Vietnam War Victims Wanted Justice
+              </span>
+              <span class="other-news-thin">
+                South Korean troops, the largest foreign contingent fighting
+                alongside U.S. soldiers during Vietnam War, have been dogged by
+                brutality allegations.
+              </span>
+            </div>
+          </a>
+        </div>
+        <div class="other-news item-6">
+          <a href="#">
+            <div class="other-news-text-container">
+              <span class="other-news-bold">
+                50 Years After Vietnam, Thousands Flee Lost War
+              </span>
+              <span class="other-news-thin">
+                The U.S. admitted more than 300,000 asians after the War. There
+                is little chance the country will repeat the extensive refugee
+                resettlement effort.
+              </span>
+            </div>
+          </a>
+          <img
+            class="other-news-pictures"
+            src="vietnam person.jpg"
+            alt="A photograph of a person from Vietnam on a bicycle"
+          />
+        </div>
+        <div class="other-news item-7">
+          <img
+            class="other-news-pictures"
+            src="school.jpg"
+            alt="A photograph of a teacher and a child with masks on"
+          />
+
+          <a href="#">
+            <div class="other-news-text-container">
+              <span class="other-news-bold">
+                A pandemic first day of school in California
+              </span>
+              <span class="other-news-thin">
+                Masks, tears and joy as students return to the classroom.
+              </span>
+            </div>
+          </a>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
