--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,45 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Project 2: The News Site</title>
+		<link rel="stylesheet" href="./style.css" />
+		<!-- dont forget the meta tag for responsiveness -->
+	</head>
+	<body>
+		<header>
+			<!-- Some kind of logo and navbar -->
+			<img class="header-logo" src="./assets/logo.svg" alt="logo" />
+			<nav>
+				<a href="http://" target="_blank">LINK 1</a>
+				<a href="http://" target="_blank">LINK 2</a>
+				<a href="http://" target="_blank">LINK 3</a>
+				<a href="http://" target="_blank">LINK 4</a>
+			</nav>
+		</header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+		<section class="big-news">
+			<!-- <div class="dummy-img"></div> -->
+			<!-- The big news content -->
+			<img class="dummy-img" src="./assets/big-news.jpg" alt="breaking news image" />
+			<p class="news-text">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+				nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+				sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+				enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+				nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+				eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+				reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+				nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+				sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+		<section class="">
+			<!-- The other news  -->
+		</section>
+	</body>
 </html>
