--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,225 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kaisei+Opti:wght@400;500;700&family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/df7601e6e4.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+    <section class="full__container">
+      <header class="main__header">
+        <h1>Cat(news)meows</h1>
+      </header>
+      <nav class="my__nav">
+        <a href="#">Startpage</a>
+        <a href="#">Big news</a>
+        <a href="#">Small news</a>
+        <a href="#">Contact us</a>
+      </nav>
+      <section class="main__section">
+        <div>
+          <img src="images/kitty-hero@2x.jpg" />
+          <div>
+            <h2 class="big-news__header">
+              Welcome to the very purrrent cat(news)meows
+            </h2>
+            <p>
+              It's 3am, time to create some chaos please let me outside pouty
+              face yay! wait, it's cold out please let me inside pouty face oh,
+              thank you rub against mommy's leg oh it looks so nice out, please
+              let me outside again the neighbor cat was mean to me please let me
+              back inside flop over check cat door for ambush 10 times before
+              coming in Plan steps for world domination meow.<br /><br />
+              Be superior. I like big cats and i can not lie so you're just
+              gonna scroll by without saying meowdy? hate dogs. The dog smells
+              bad do doodoo in the litter-box, clickityclack on the piano, be
+              frumpygrumpy cat playing a fiddle in hey diddle diddle? or lay on
+              arms while you're using the keyboard for run as fast as i can into
+              another room for no reason chew the plant. Plays league of
+              legends.<br />
+              <br />
+              Scratch my tummy actually i hate you now fight me make muffins at
+              four in the morning wake up owner meeeeeeooww scratch at legs and
+              beg for food then cry and yowl until they wake up at two pm jump
+              on window and sleep while observing the bootyful cat next door
+              that u really like but who already has a boyfriend end up making
+              babies with her and let her move in but waffles but meoooow or
+              human is washing you why halp oh the horror flee scratch hiss
+              bite. Cattt catt cattty cat being a cat.
+            </p>
+          </div>
+        </div>
+        <div>
+          <img src="images/kitty1@2x.jpg" />
+          <h3>This is Herald</h3>
+          <p>
+            A 2 year old playful male. He likes meowing, food and late night
+            zoomies.
+          </p>
+          <span>Adopt me!</span>
+        </div>
+        <div>
+          <h2>Adopt, don't shop</h2>
+          <p>
+            Cats are fats i like to pets them they like to meow back cats are
+            fats i like to pets them they like to meow back Bathe private parts
+            with tongue then lick owner's face run in circles 𝕄𝔼𝕆𝕎 meow to be
+            let out, and pee in the shoe. Nap all day sleep over your phone and
+            make cute snoring noises, and purr purr purr until owner pets why
+            owner not pet me hiss scratch meow, curl up and sleep on the freshly
+            laundered towels but roll over and sun my belly and i love cuddles.
+            I'm bored inside, let me out i'm lonely outside, let me in i can't
+            make up my mind whether to go in or out, guess i'll just stand
+            partway in and partway out, contemplating the universe for half an
+            hour how dare you nudge me with your foot?!?! leap into the air in
+            greatest offense!
+          </p>
+        </div>
+        <div>
+          <img src="images/kitty2@2x.jpg" />
+          <h3>This is Sazz</h3>
+          <p>
+            A 12 year male. Very patient and calm older gentleman. Likes to be
+            brushed.
+          </p>
+          <span>Adopt me!</span>
+        </div>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+        <div>
+          <h2>
+            At the moment we have 32 cats in our shelter, which will you adopt?
+          </h2>
+          <p>
+            Cats are fats i like to pets them they like to meow back cats are
+            fats i like to pets them they like to meow back Bathe private parts
+            with tongue then lick owner's face run in circles 𝕄𝔼𝕆𝕎 meow to be
+            let out, and pee in the shoe. Nap all day sleep over your phone and
+            make cute snoring noises, and purr purr purr until owner pets why
+            owner not pet me hiss scratch meow, curl up and sleep on the freshly
+            laundered towels but roll over and sun my belly and i love cuddles.
+            I'm bored inside, let me out i'm lonely outside, let me in i can't
+            make up my mind whether to go in or out, guess i'll just stand
+            partway in and partway out, contemplating the universe for half an
+            hour how dare you nudge me with your foot?!?! leap into the air in
+            greatest offense!
+          </p>
+        </div>
+        <div>
+          <img src="images/kitty3@2x.jpg" />
+          <h3>This is Pat</h3>
+          <p>
+            Pat is a playful larger cat that likes to jump around and play
+            daily.
+          </p>
+          <span>Adopt me!</span>
+        </div>
+        <div>
+          <img src="images/kitty4@2x.jpg" />
+          <h3>This is Ziggy</h3>
+          <p>
+            7 year old female. A bit shy but really enoys cuddles in the
+            evening.
+          </p>
+          <span>Adopt me!</span>
+        </div>
 
-    <section class="">
-      <!-- The other news  -->
+        <div>
+          <h2>
+            Feeding your cats smaller amounts several times a day works better
+          </h2>
+          <p>
+            Cats are fats i like to pets them they like to meow back cats are
+            fats i like to pets them they like to meow back Bathe private parts
+            with tongue then lick owner's face run in circles 𝕄𝔼𝕆𝕎 meow to be
+            let out, and pee in the shoe. Nap all day sleep over your phone and
+            make cute snoring noises, and purr purr purr until owner pets why
+            owner not pet me hiss scratch meow, curl up and sleep on the freshly
+            laundered towels but roll over and sun my belly and i love cuddles.
+            I'm bored inside, let me out i'm lonely outside, let me in i can't
+            make up my mind whether to go in or out, guess i'll just stand
+            partway in and partway out, contemplating the universe for half an
+            hour how dare you nudge me with your foot?!?! leap into the air in
+            greatest offense!
+          </p>
+        </div>
+
+        <div>
+          <img src="images/kitty5@2x.jpg" />
+          <h3>This is Simba</h3>
+          <p>
+            16 year old main coon gentleman. He enjoys watching the birds
+            outside your windows.
+          </p>
+          <span>Adopt me!</span>
+        </div>
+        <div>
+          <img src="images/kitty6@2x.jpg" />
+          <h3>This is Milkshake</h3>
+          <p>
+            Milkshake is a 1 year old lady with a lot of sazz. She enjoys her
+            food a lot.
+          </p>
+          <span>Adopt me!</span>
+        </div>
+        <div>
+          <h2>
+            Most cats enjoy a brush trough of their fur at least once a week
+          </h2>
+          <p>
+            Bathe private parts with tongue then lick owner's face run in
+            circles 𝕄𝔼𝕆𝕎 meow to be let out, and pee in the shoe. Nap all day
+            sleep over your phone and make cute snoring noises, and purr purr
+            purr until owner pets why owner not pet me hiss scratch meow, curl
+            up and sleep on the freshly laundered towels but roll over and sun
+            my belly and i love cuddles. I'm bored inside, let me out i'm lonely
+            outside, let me in i can't make up my mind whether to go in or out,
+            guess i'll just stand partway in and partway out, contemplating the
+            universe for half an hour how dare you nudge me with your foot?!?!
+            leap into the air in greatest offense!
+          </p>
+        </div>
+        <div>
+          <img src="images/kitty7@2x.jpg" />
+          <h3>This is Bob</h3>
+          <p>
+            Bob is a curious 5 year old. He loves his zoomies and actually
+            enjoys his baths.
+          </p>
+          <span>Adopt me!</span>
+        </div>
+        <div>
+          <img src="images/kitty8@2x.jpg" />
+          <h3>This is Anna</h3>
+          <p>
+            Don't be fooled by her looks. She is a very playful and fun little
+            cat to be around.
+          </p>
+          <span>Adopt me!</span>
+        </div>
+      </section>
+
+      <footer class="main__footer">
+        <h2>Contact us</h2>
+        <div>
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fas fa-phone-square"></i>
+        </div>
+      </footer>
     </section>
   </body>
 </html>
