added som images, heading, content and a footer

--- a/code/index.html
+++ b/code/index.html
@@ -5,18 +5,36 @@
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <img class="logo" src="logo.svg" alt="Technigo">
+      <nav class="nav-bar">
+        <a>Menu</a>
+        <a>About</a>
+       <a>Contakt</a>
+      </nav> 
     </header>
+
+    <div class="tidningens-logga">
+      <h1>The cat magazine</h1>
+    </div>
 
     <section class="big-news">
       <!-- The big news content -->
+      <p class="big-news-text">Cat ipsum dolor sit amet, loved it, hated it, loved it, hated it pushes butt to face. Litter kitter kitty litty little kitten big roar roar feed me love blinks and purr purr purr purr yawn for walk on keyboard i can haz hide head under blanket so no one can see. Run around the house at 4 in the morning slap kitten brother with paw yet ptracy i love cuddles freak human out make funny noise mow mow mow mow mow mow success now attack human and the cat was chasing the mouse. Meow all night litter box is life, but pounce on unsuspecting person or meoooow but meeeeouw so take a big fluffing crap 💩 for mewl for food at 4am. I love cuddles annoy owner until he gives you food say meow repeatedly until belly rubs, feels good walk on keyboard touch water with paw then recoil in horror for howl on top of tall thing but catching very fast laser pointer, mew. Touch water with paw then recoil in horror. Cereal boxes make for five star accommodation howl on top of tall thing mouse and poop on couch cat walks in keyboard for ask to go outside and ask to come inside and ask to go outside and ask to come inside or shake treat bag. Just going to dip my paw in your coffee and do a taste test - oh never mind i forgot i don't like coffee - you can have that back now open the door, let me out, let me out, let me-out, let me-aow, let meaow, meaow!. Crash against wall but walk away like nothing happened kitty but hunt by meowing loudly at 5am next to human slave food dispenser flop over, for scamper. Suddenly go on wild-eyed crazy rampage i'm going to lap some water out of my master's cup meow meow, i do no work yet get food, shelter, and lots of stuff just like man who lives with us. Leave fur on owners clothes i is not fat, i is fluffy sleeping in the box. 
+      </p>
     </section>
 
     <section class="">
       <!-- The other news  -->
     </section>
   </body>
+  <footer>
+    <img src="instagram-71-227895.png" alt="instagram icon">
+    <img src="facebook-3017395-2508544.png" alt="facebook icon">
+  </footer>
 </html>
