--- a/code/index.html
+++ b/code/index.html
@@ -4,20 +4,37 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
+    <header class="header">
       <!-- Some kind of logo and navbar -->
+      <img class="logo" src="./img/apple.svg" alt="pear-logo" />
+      <h1 class="site-name">Old News</h1>
+      <nav class="navbar">
+       <a href="#home">Home</a>
+       <a href="#About">About</a>
+       <a href="#Contact">Contact</a>
+       <a href="#Login">Log in</a>   
+      </nav>
     </header>
-
     <section class="big-news">
       <!-- The big news content -->
+      <img class="big-news-image" src="" alt="" />
+      <p>gfjjghjgjgfgj</p>
+      
     </section>
 
     <section class="">
       <!-- The other news  -->
+      <p>gfjjghjgjgfgj</p>
+      <p>gfjjghjgjgfgj</p>
+      <p>gfjjghjgjgfgj</p>
+      <p>fdhhfgjhfgjjf</p>
     </section>
   </body>
 </html>
